--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -157,6 +157,12 @@
             <version>2.3</version>
         </dependency>
         <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-convert</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+        <dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time-hibernate</artifactId>
 			<version>1.3</version>
