--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -188,6 +188,12 @@
             <artifactId>spring-integration-jpa</artifactId>
             <version>${spring.integration.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.framework.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-http</artifactId>
