--- a/eudevfin/cda-wrapper/pom.xml
+++ b/eudevfin/cda-wrapper/pom.xml
@@ -1,4 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (c) 2013 Development Gateway.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the GNU Public License v3.0
+  ~ which accompanies this distribution, and is available at
+  ~ http://www.gnu.org/licenses/gpl.html
+  ~
+  ~ Contributors:
+  ~    fferreyra
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -8,6 +17,7 @@
 		<version>0.0.1.CI-SNAPSHOT</version>
 	</parent>
 	<artifactId>cda-wrapper</artifactId>
+	<packaging>war</packaging>
 
 	<name>EU-DEVFIN CDA Wrapper</name>
 
@@ -218,5 +228,4 @@
 
 	</dependencies>
 
-	<packaging>war</packaging>
 </project>
