--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -50,6 +50,13 @@
 			<type>war</type>			
 		</dependency>
 
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>cda-wrapper</artifactId>
+			<version>${project.version}</version>
+			<type>war</type>			
+		</dependency>
+
 	</dependencies>
 
 	<build>
