--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -51,6 +51,14 @@
             <artifactId>derby</artifactId>
             <version>10.10.1.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbynet</artifactId>
+            <version>10.10.1.1</version>
+        </dependency>
+                      
+        
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
