--- a/eudevfin/cdf-wrapper/package.json
+++ b/eudevfin/cdf-wrapper/package.json
@@ -15,6 +15,7 @@
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-qunit": "~0.2.2",
 		"grunt-contrib-cssmin": "~0.6.1",
-		"grunt-contrib-clean": "~0.4.1"
+		"grunt-contrib-clean": "~0.4.1",
+		"grunt-jsbeautifier": "~0.2.6"
 	}
 }
