--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -1,98 +1,104 @@
-<!-- ~ Copyright (c) 2013 Development Gateway. ~ All rights reserved. This 
-	program and the accompanying materials ~ are made available under the terms 
-	of the GNU Public License v3.0 ~ which accompanies this distribution, and 
-	is available at ~ http://www.gnu.org/licenses/gpl.html ~ ~ Contributors: 
-	~ aartimon -->
+<!--
+  ~ Copyright (c) 2013 Development Gateway.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the GNU Public License v3.0
+  ~ which accompanies this distribution, and is available at
+  ~ http://www.gnu.org/licenses/gpl.html
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.devgateway.eudevfin</groupId>
-		<artifactId>integration</artifactId>
-		<version>0.0.1.CI-SNAPSHOT</version>
-	</parent>
-	<artifactId>dim</artifactId>
-	<packaging>war</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.devgateway.eudevfin</groupId>
+        <artifactId>integration</artifactId>
+        <version>0.0.1.CI-SNAPSHOT</version>
+    </parent>
+    <artifactId>dim</artifactId>
+    <packaging>war</packaging>
 
-	<name>EU-DEVFIN Data Input</name>
+    <name>EU-DEVFIN Data Input</name>
 
-	<dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.devgateway.eudevfin</groupId>
-			<artifactId>auth</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>auth</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
 
-		<dependency>
-			<groupId>org.devgateway.eudevfin</groupId>
-			<artifactId>common-auth</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common-auth</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.devgateway.eudevfin</groupId>
-			<artifactId>common-financial</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.devgateway.eudevfin</groupId>
-			<artifactId>financial</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.devgateway.eudevfin</groupId>
-			<artifactId>common-exchange</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		
-		
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common-financial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>financial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.devgateway.eudevfin</groupId>
-			<artifactId>cdf-wrapper</artifactId>
-			<version>${project.version}</version>
-			<type>war</type>			
-		</dependency>
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common-exchange</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.devgateway.eudevfin</groupId>
-			<artifactId>cda-wrapper</artifactId>
-			<version>${project.version}</version>
-			<type>war</type>			
-		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>cdf-wrapper</artifactId>
+            <version>${project.version}</version>
+            <type>war</type>
+        </dependency>
 
-	<build>
-		<resources>
-			<resource>
-				<filtering>false</filtering>
-				<directory>src/main/resources</directory>
-			</resource>
-		</resources>
-		<plugins>
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>cda-wrapper</artifactId>
+            <version>${project.version}</version>
+            <type>war</type>
+        </dependency>
 
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.version}</version>
-				<configuration>
-					<jvmArgs>-Xmx512M -XX:MaxPermSize=128M</jvmArgs>
-					<war>${basedir}/target/dim-${project.version}</war>
-					<scanIntervalSeconds>1</scanIntervalSeconds>
-					<stopKey>chuck</stopKey>
-					<stopPort>9999</stopPort>
-					<stopWait>7</stopWait>
-					<waitForChild>false</waitForChild>
-					<webApp>
-						<contextPath>/</contextPath>
-					</webApp>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+        <plugins>
+
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty.version}</version>
+                <configuration>
+                    <jvmArgs>-Xmx512M -XX:MaxPermSize=128M</jvmArgs>
+                    <war>${basedir}/target/dim-${project.version}</war>
+                    <scanIntervalSeconds>1</scanIntervalSeconds>
+                    <stopKey>chuck</stopKey>
+                    <stopPort>9999</stopPort>
+                    <stopWait>7</stopWait>
+                    <waitForChild>false</waitForChild>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
