--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -31,18 +31,18 @@
     
     <properties>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
-        <spring.framework.version>4.0.3.RELEASE</spring.framework.version>
-        <spring.integration.version>3.0.1.RELEASE</spring.integration.version>
+        <spring.framework.version>4.0.9.RELEASE</spring.framework.version>
+        <spring.integration.version>3.0.8.RELEASE</spring.integration.version>
         <spring.datajpa.version>1.4.5.RELEASE</spring.datajpa.version>
         <jetty.version>9.2.15.v20160210</jetty.version>
         <wicket.version>6.12.0</wicket.version>
-        <hibernate.core.version>4.2.8.Final</hibernate.core.version>
-        <spring.security.version>3.2.2.RELEASE</spring.security.version>
+        <hibernate.core.version>4.2.21.Final</hibernate.core.version>
+        <spring.security.version>3.2.9.RELEASE</spring.security.version>
         <servlet.api.version>2.5</servlet.api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <wicket.bootstrap>0.8.5</wicket.bootstrap>
         <derby.version>10.12.1.1</derby.version>
-        <wicket.select2.version>2.2.2</wicket.select2.version>
+        <wicket.select2.version>2.2.3</wicket.select2.version>
         <ehcache.version>2.4.7</ehcache.version>
         <liquibase.version>3.0.8</liquibase.version>
         <jminix.version>1.1.0</jminix.version>
@@ -110,6 +110,12 @@
             <artifactId>hibernate-ehcache</artifactId>
             <version>${hibernate.core.version}</version>
         </dependency>
+
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.2</version>
+		</dependency>
 
 
         <dependency>
