--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -11,38 +11,38 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.devgateway.eudevfin</groupId>
     <artifactId>eudevfin</artifactId>
-    <version>1.3.3</version>
+   <version>1.4.6-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>EU-DEVFIN Parent Package</name>
     <url>http://www.springframework.org</url>
     
-    <distributionManagement>
-        <repository>
-            <id>eudevfin-releases</id>
-            <name>eudevfin-releases</name>
-            <url>http://artifactory.ampdev.net/artifactory/eudevfin-releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>eudevfin-snapshots</id>
-            <name>eudevfin-snapshots</name>
-            <url>http://artifactory.ampdev.net/artifactory/eudevfin-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+	<distributionManagement>
+	    <repository>
+	        <id>eudevfin-releases</id>
+	        <name>eudevfin-releases</name>
+	        <url>http://artifactory.ampdev.net/artifactory/eudevfin-releases</url>
+	    </repository>
+	    <snapshotRepository>
+			<id>eudevfin-snapshots</id>
+			<name>eudevfin-snapshots</name>
+			<url>http://artifactory.ampdev.net/artifactory/eudevfin-snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
     
     <properties>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
-        <spring.framework.version>4.0.3.RELEASE</spring.framework.version>
-        <spring.integration.version>3.0.1.RELEASE</spring.integration.version>
+        <spring.framework.version>4.0.9.RELEASE</spring.framework.version>
+        <spring.integration.version>3.0.8.RELEASE</spring.integration.version>
         <spring.datajpa.version>1.4.5.RELEASE</spring.datajpa.version>
-        <jetty.version>9.2.1.v20140609</jetty.version>
+        <jetty.version>9.2.15.v20160210</jetty.version>
         <wicket.version>6.12.0</wicket.version>
-        <hibernate.core.version>4.2.8.Final</hibernate.core.version>
-        <spring.security.version>3.2.2.RELEASE</spring.security.version>
+        <hibernate.core.version>4.2.21.Final</hibernate.core.version>
+        <spring.security.version>3.2.9.RELEASE</spring.security.version>
         <servlet.api.version>2.5</servlet.api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <wicket.bootstrap>0.8.5</wicket.bootstrap>
-        <derby.version>10.10.2.0</derby.version>
-        <wicket.select2.version>2.2.2</wicket.select2.version>
+        <derby.version>10.12.1.1</derby.version>
+        <wicket.select2.version>2.2.3</wicket.select2.version>
         <ehcache.version>2.4.7</ehcache.version>
         <liquibase.version>3.0.8</liquibase.version>
         <jminix.version>1.1.0</jminix.version>
@@ -110,6 +110,14 @@
             <artifactId>hibernate-ehcache</artifactId>
             <version>${hibernate.core.version}</version>
         </dependency>
+
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-envers</artifactId>
@@ -177,7 +185,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security</groupId>
+        <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${spring.security.version}</version>
         </dependency>
@@ -364,26 +372,28 @@
         <plugins>
 
 	
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <tagNameFormat>eudevfin-@{project.version}</tagNameFormat>
-                </configuration>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.1</version>
+				 <configuration>
+          			<tagNameFormat>eudevfin-@{project.version}</tagNameFormat>
+        		</configuration>
+			</plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.4</version>
-
+                <version>2.6</version>
+				<configuration>
+					<recompressZippedFiles>false</recompressZippedFiles>
+				</configuration>
             </plugin>
 
-            <plugin>
+	            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.5.1</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -452,9 +462,9 @@
             <id>EU-DEVFIN Central</id>
             <name>DG EU-DEVFIN Central Repo</name>
             <url>http://artifactory.ampdev.net/artifactory/eudevfin/</url>
-            <releases>
+            <snapshots>
                 <enabled>true</enabled>
-            </releases>
+            </snapshots>
         </repository>
 
     </repositories>
