--- a/eudevfin/reports-ui/pom.xml
+++ b/eudevfin/reports-ui/pom.xml
@@ -10,14 +10,14 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.devgateway.eudevfin</groupId>
-		<artifactId>eudevfin</artifactId>
-		<version>1.4.6-SNAPSHOT</version>
-	</parent>
-	<artifactId>reports-ui</artifactId>
-	<packaging>war</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.devgateway.eudevfin</groupId>
+        <artifactId>eudevfin</artifactId>
+        <version>1.3.3</version>
+    </parent>
+    <artifactId>reports-ui</artifactId>
+    <packaging>war</packaging>
 
 
     <name>EU-DEVFIN Reports UI</name>
