--- a/eudevfin/reports-core/src/main/resources/jasperreports.properties
+++ b/eudevfin/reports-core/src/main/resources/jasperreports.properties
@@ -7,3 +7,4 @@
 ###############################################################################
 net.sf.jasperreports.query.executer.factory.mdx=org.devgateway.eudevfin.reports.core.utils.JRMdxQueryExecuterFactoryCustom
 net.sf.jasperreports.query.executer.factory.MDX=org.devgateway.eudevfin.reports.core.utils.JRMdxQueryExecuterFactoryCustom
+net.sf.jasperreports.awt.ignore.missing.font=true
